--- a/työaika/MainWindow.xaml
+++ b/työaika/MainWindow.xaml
@@ -1,11 +1,11 @@
 ﻿<Window x:Class="työaika.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:työaika"
-        mc:Ignorable="d"
-        Title="Työajanseuranta" Height="750" Width="1150" Background="#FFE5E5E5">
+xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+xmlns:local="clr-namespace:työaika"
+mc:Ignorable="d"
+Title="Työajanseuranta" Height="750" Width="1150">
     <Window.BorderBrush>
         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
             <GradientStop Color="Black" Offset="0"/>
@@ -14,7 +14,11 @@
     </Window.BorderBrush>
 
     <Grid>
-        <TabControl HorizontalAlignment="Left" Height="719" VerticalAlignment="Top" Width="1142" Background="#FFE5E5E5">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <TabControl HorizontalAlignment="Left" Height="719" VerticalAlignment="Top" Width="1142" Background="#FFE5E5E5" Grid.ColumnSpan="2">
             <TabItem Header="Työaika">
                 <Grid Background="#FFE5E5E5">
                     <ComboBox HorizontalAlignment="Left" Margin="44,336,0,0" VerticalAlignment="Top" Width="158" Grid.ColumnSpan="3">
@@ -24,11 +28,11 @@
                     <ListView HorizontalAlignment="Left" Height="228" Margin="10,10,0,0" VerticalAlignment="Top" Width="1116" Grid.ColumnSpan="3">
                         <ListView.View>
                             <GridView>
-                                <GridViewColumn Header="Päivämäärä"/>
-                                <GridViewColumn Header="Tehtävä"/>
-                                <GridViewColumn Header="Kohde"/>
-                                <GridViewColumn Header="Tunnit"/>
-                                <GridViewColumn Header="Vapaateksti"/>
+                                <GridViewColumn Header=" Päivämäärä "/>
+                                <GridViewColumn Header=" Tehtävä "/>
+                                <GridViewColumn Header=" Kohde "/>
+                                <GridViewColumn Header=" Tunnit "/>
+                                <GridViewColumn Header=" Vapaateksti "/>
                             </GridView>
                         </ListView.View>
                     </ListView>
@@ -58,17 +62,19 @@
             <TabItem Header="Asetukset">
                 <Grid>
                     <ListView HorizontalAlignment="Left" Height="363" Margin="69.2,53,0,0" VerticalAlignment="Top" Width="234" Grid.Column="1">
-                    <ListView.view>
-                        <GridView>
-                            <GridViewColumn Header="Tehtävät"/>
-                        </GridView>
-                    </ListView.view>
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Header=" Tehtävät "/>
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
                     <ListView HorizontalAlignment="Left" Height="363" Margin="510.2,53,0,0" VerticalAlignment="Top" Width="234" Grid.Column="1">
-                    <ListView.view>
-                        <GridView>
-                            <GridViewColumn Header="Kohde"/>
-                        </GridView>
-                    </ListView.view>
+                        <ListView.View>
+                            <GridView>
+                                <GridViewColumn Header=" Kohde "/>
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
                 </Grid>
             </TabItem>
         </TabControl>
