--- a/työaika/MainWindow.xaml
+++ b/työaika/MainWindow.xaml
@@ -27,11 +27,11 @@ Title="Työajanseuranta" Height="750" Width="1150" Loaded="Window_Loaded" >
                     <ListView x:Name="listViewRivi" HorizontalAlignment="Left" Height="228" Margin="10,10,0,0" VerticalAlignment="Top" Width="1116" Grid.ColumnSpan="3">
                         <ListView.View>
                             <GridView>
-                                <GridViewColumn Header=" Päivämäärä "/>
-                                <GridViewColumn Header=" Tehtävä "/>
-                                <GridViewColumn Header=" Kohde "/>
-                                <GridViewColumn Header=" Tunnit "/>
-                                <GridViewColumn Header=" Vapaateksti "/>
+                                <GridViewColumn Header=" Päivämäärä " DisplayMemberBinding="{Binding Pvm}"/>
+                                <GridViewColumn Header=" Tehtävä " DisplayMemberBinding="{Binding Tehtava}"/>
+                                <GridViewColumn Header=" Kohde " DisplayMemberBinding="{Binding Kohde}"/>
+                                <GridViewColumn Header=" Tunnit " DisplayMemberBinding="{Binding Tunnit}"/>
+                                <GridViewColumn Header=" Vapaateksti " DisplayMemberBinding="{Binding Vapaateksti}"/>
                             </GridView>
                         </ListView.View>
                     </ListView>
@@ -42,9 +42,21 @@ Title="Työajanseuranta" Height="750" Width="1150" Loaded="Window_Loaded" >
                     <Button x:Name="btnRiviMuokkaa" Content="Muokkaa" HorizontalAlignment="Left" Margin="89.2,608,0,0" VerticalAlignment="Top" Width="74" Height="32" Click="btnRiviMuokkaa_Click" Grid.Column="2"/>
                     <ComboBox x:Name="comboBoxTehtava" HorizontalAlignment="Left" Margin="123.2,281,0,0" VerticalAlignment="Top" Width="158" Grid.Column="2" />
 
-                    <ComboBox x:Name="comboBoxTunnit" HorizontalAlignment="Left" Margin="123.2,336,0,0" VerticalAlignment="Top" Width="158" Grid.Column="2">
-                        <ComboBoxItem Content="1h"/>
-                        <ComboBoxItem Content="2h"/>
+                    <ComboBox x:Name="comboBoxTunnit" HorizontalAlignment="Left" Margin="123.2,336,0,0" VerticalAlignment="Top" Width="158" Grid.Column="2" >
+                        <!--<ComboBoxItem Content="1" IsSelected="True" />
+                        <ComboBoxItem Content="2"/>
+                        <ComboBoxItem Content="3"/>
+                        <ComboBoxItem Content="4"/>
+                        <ComboBoxItem Content="5"/>
+                        <ComboBoxItem Content="6"/>
+                        <ComboBoxItem Content="7"/>
+                        <ComboBoxItem Content="8"/>
+                        <ComboBoxItem Content="9"/>
+                        <ComboBoxItem Content="10"/>
+                        <ComboBoxItem Content="11"/>
+                        <ComboBoxItem Content="12"/>
+                        <ComboBoxItem Content="13"/>
+                        <ComboBoxItem Content="14"/>-->
                     </ComboBox>
                     <TextBox x:Name="textBoxVapaateksti" HorizontalAlignment="Left" Height="171" Margin="44,399,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="434" AcceptsReturn="True" Grid.ColumnSpan="3" />
                     <DatePicker x:Name="datePickerPaivamaara" HorizontalAlignment="Left" Margin="44,280,0,0" VerticalAlignment="Top" Width="158" Grid.ColumnSpan="3"/>
